force-app/main/default/objects/Claim__c/fields/Claim_Summary__c.field-meta.xml
<CustomField>
    <fullName>Claim_Summary__c</fullName>
    <label>Claim Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>