force-app/main/default/objects/Claim__c/fields/Clinical_Review__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Review__c</fullName>
    <label>Clinical Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>