force-app/main/default/objects/Claim__c/fields/Clinical_Summary__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Summary__c</fullName>
    <label>Clinical Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>