force-app/main/default/objects/Claim__c/fields/Expert_Review__c.field-meta.xml
<CustomField>
    <fullName>Expert_Review__c</fullName>
    <label>Expert Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>